--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -13,6 +13,7 @@
                         <viewControllerLayoutGuide type="bottom" id="zmj-NW-1Ft"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="hee-pw-qDf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SagradaFamilia.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="9gR-pO-iJH">
@@ -103,6 +104,15 @@
                                     <action selector="sendMailButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LC1-1z-xTZ"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUS-Pd-qV7">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="181" width="226" height="62"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -112,6 +122,7 @@
                                 <exclude reference="ae8-Ed-TVO"/>
                                 <exclude reference="Jeu-vK-3Ks"/>
                                 <exclude reference="xVJ-d6-Gao"/>
+                                <exclude reference="wUS-Pd-qV7"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -121,6 +132,7 @@
                                 <include reference="ae8-Ed-TVO"/>
                                 <include reference="Jeu-vK-3Ks"/>
                                 <include reference="xVJ-d6-Gao"/>
+                                <include reference="wUS-Pd-qV7"/>
                             </mask>
                         </variation>
                     </view>
@@ -129,6 +141,7 @@
                         <outlet property="enterNameTextField" destination="AKY-GR-aTU" id="7hT-Za-otu"/>
                         <outlet property="mailButton" destination="xVJ-d6-Gao" id="dSU-p5-E8Y"/>
                         <outlet property="messageLabel" destination="Jeu-vK-3Ks" id="chb-F8-NIG"/>
+                        <outlet property="nameLabel" destination="wUS-Pd-qV7" id="f3f-JB-Gn0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
